Fixes spacing issues for user with many challenges in users#show

--- a/app/assets/stylesheets/users/show.css
+++ b/app/assets/stylesheets/users/show.css
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
 }
 
 .challenges-users-show-info {
   display: flex;
   width: 100%;
+  flex: 1;
 }
 
 .challenges-users-show-info-column {
@@ -16,4 +18,25 @@
   flex: 1;
   margin: 16px;
   padding: 8px;
+  overflow: scroll;
+}
+
+.challenges-users-show-info-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  flex: 1;
+  margin: 16px;
+  padding: 8px;
+  overflow: scroll;
+}
+
+.challenges-users-show-info-grid-item {
+  margin: 4px;
+}
+
+.challenges-users-show-discipline-actions-title {
+  width: 100%;
+  text-align: center;
 }
